--- a/FeatureExtractionModule/src/autoencoder_approach/contractive_autoencoder.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/contractive_autoencoder.ipynb
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Deep Autoencoder - Normalized Input Data"
+    "#### Contractive Autoencoder - Normalized Input Data"
    ]
   },
   {
@@ -1831,18 +1831,6 @@
     "     'epochs': [100],\n",
     "     'dropout': (0, 0.40, 10),\n",
     "     'optimizer': [Adam, Nadam],\n",
-    "     'enc_layers': [\n",
-    "         [156,128],\n",
-    "         [156],\n",
-    "         [128],\n",
-    "         [156, 128]\n",
-    "     ],\n",
-    "     'dec_layers': [\n",
-    "         [128,156],\n",
-    "         [156],\n",
-    "         [128],\n",
-    "         [128, 156]\n",
-    "     ],\n",
     "     'loss': ['binary_crossentropy', 'mse'],\n",
     "     'enc_activation': ['relu', 'sigmoid'],\n",
     "     'last_activation': ['softmax', 'sigmoid'],\n",
