--- a/FeatureExtractionModule/src/autoencoder_approach/deep_autoencoder.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/deep_autoencoder.ipynb
@@ -1846,7 +1846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Undercomplete Autoencoder - Shortened Input Data"
+    "#### Deep Autoencoder - Shortened Input Data"
    ]
   },
   {
