--- a/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "source": [
     "autoencoders:  \n",
-    "[Undercomplete Autoencoders](#Undercomplete-Autoencoders)  \n",
-    "[Sparse Autoencoders](#Sparse-Autoencoders)  \n",
-    "[Deep Autoencoders](#Deep-Autoencoders)  \n",
-    "[Contractive Autoencoders](#Contractive-Autoencoders)  \n",
+    "[Undercomplete Autoencoder](#Undercomplete-Autoencoder)  \n",
+    "[Sparse Autoencoder](#Sparse-Autoencoder)  \n",
+    "[Deep Autoencoder](#Deep-Autoencoder)  \n",
+    "[Contractive Autoencoder](#Contractive-Autoencoder)  \n",
     "\n",
     "classifiers:  \n",
     "[Simple dense layer](#Simple-dense-layer)  \n",
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Undercomplete autoencoder  \n",
+    "#### Undercomplete Autoencoder  \n",
     "from https://blog.keras.io/building-autoencoders-in-keras.html"
    ]
   },
