Test of low vs high classification

--- a/FeatureExtractionModule/src/autoencoder_approach/Input Data tests.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/Input Data tests.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x227883d9588>]"
+       "[<matplotlib.lines.Line2D at 0x142af7a9548>]"
       ]
      },
      "execution_count": 6,
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,6 +1879,256 @@
     "        print(test_idents[0], \"test ident is in train idents; ident =\", ident)\n",
     "    if validation_idents[0] in train_idents:\n",
     "        print(validation_idents[0], \"validation ident is in train idents; ident =\", ident)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_busy_vs_relax_timeframes_br_hr(path, ident, seconds):\n",
+    "    \"\"\"Returns raw data from either 'on task' or 'relax' time frames and their class (0 or 1).\n",
+    "    TODO: join functions\"\"\"\n",
+    "\n",
+    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
+    "    data = dataread.read_grc_data()  # read from files\n",
+    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
+    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
+    "\n",
+    "    tasks_data = np.empty((0, seconds*samp_rate))\n",
+    "    tasks_y = np.empty((0, 1))\n",
+    "    breathing = np.empty((0,12))\n",
+    "    heartbeat = np.empty((0,10))\n",
+    "\n",
+    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
+    "    relax_n = dataread.get_relax_timestamps(return_indexes=True)\n",
+    "\n",
+    "    for i in cog_res['task_number']:\n",
+    "        task_num_table = i - 225  # 0 - 17\n",
+    "        tmp_tasks_data = np.empty((0, seconds*samp_rate))\n",
+    "        tmp_tasks_y = np.empty((0, 1))\n",
+    "        tmp_breathing = np.empty((0,12))\n",
+    "        tmp_heartbeat = np.empty((0,10))\n",
+    "\n",
+    "        ### task versus relax (1 sample each)\n",
+    "        dataextract = dataextractor.DataExtractor(data[0][busy_n[task_num_table][0]:busy_n[task_num_table][1]],\n",
+    "                                                  data[1][busy_n[task_num_table][0]:busy_n[task_num_table][1]],\n",
+    "                                                  samp_rate)\n",
+    "\n",
+    "        dataextract_relax = dataextractor.DataExtractor(data[0][relax_n[task_num_table][0]:relax_n[task_num_table][1]],\n",
+    "                                                        data[1][relax_n[task_num_table][0]:relax_n[task_num_table][1]],\n",
+    "                                                        samp_rate)\n",
+    "        \n",
+    "        try:\n",
+    "            \n",
+    "            # get extracted features for breathing\n",
+    "            tmpBR_busy = dataextract.extract_from_breathing_time(dataextract.t[-samp_rate*seconds:],\n",
+    "                                                                 dataextract.y[-samp_rate*seconds:])\n",
+    "            tmpBR_relax = dataextract_relax.extract_from_breathing_time(dataextract_relax.t[-samp_rate*seconds:],\n",
+    "                                                                 dataextract_relax.y[-samp_rate*seconds:])\n",
+    "            #get extracted features for heartbeat\n",
+    "            tmpHR_busy = dataextract.extract_from_heartbeat_time(dataextract.t[-samp_rate*seconds:],\n",
+    "                                                                 dataextract.y[-samp_rate*seconds:])\n",
+    "            tmpHR_relax = dataextract.extract_from_heartbeat_time(dataextract_relax.t[-samp_rate*seconds:],\n",
+    "                                                                 dataextract_relax.y[-samp_rate*seconds:])\n",
+    "\n",
+    "            should_pass = False\n",
+    "                                                                  \n",
+    "#             if not (tmpBR_busy['br_ok'][0]):\n",
+    "# #                 print('tmpBR_busy not ok:', ident, task_num_table)\n",
+    "#                 should_pass = True\n",
+    "#             if not (tmpBR_relax['br_ok'][0]):\n",
+    "# #                 print('tmpBR_relax not ok:', ident, task_num_table)\n",
+    "#                 should_pass = True\n",
+    "#             if not (tmpHR_busy['hr_ok'][0]):\n",
+    "# #                 print('tmpHR_busy not ok:', ident, task_num_table)\n",
+    "#                 should_pass = True\n",
+    "#             if not (tmpHR_busy['hr_ok'][0]):\n",
+    "# #                 print('tmpHR_relax not ok:', ident, task_num_table)\n",
+    "#                 should_pass = True\n",
+    "#             if should_pass:\n",
+    "                \n",
+    "#                 pass\n",
+    "\n",
+    "            tmp_tasks_data = np.vstack((tmp_tasks_data, dataextract.y[-samp_rate * seconds:]))\n",
+    "            tmp_tasks_y = np.vstack((tasks_y, 1))\n",
+    "            tmp_tasks_data = np.vstack((tmp_tasks_data, dataextract_relax.y[-samp_rate * seconds:]))\n",
+    "            tmp_tasks_y = np.vstack((tmp_tasks_y, 0))\n",
+    "            \n",
+    "            # put busy frames then relaxed frames under the previous frames\n",
+    "            tmp_breathing = np.vstack((tmp_breathing, tmpBR_busy.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            tmp_breathing = np.vstack((tmp_breathing, tmpBR_relax.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            \n",
+    "            tmp_heartbeat = np.vstack((tmp_heartbeat, tmpHR_busy.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            tmp_heartbeat = np.vstack((tmp_heartbeat, tmpHR_relax.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            \n",
+    "        except ValueError:\n",
+    "#             print(ident)  # ignore short windows\n",
+    "            continue\n",
+    "        \n",
+    "        # put busy frames then relaxed frames under the previous frames\n",
+    "        tasks_data = np.vstack((tasks_data, dataextract.y[-samp_rate * seconds:]))\n",
+    "        tasks_y = np.vstack((tasks_y, 1))\n",
+    "        tasks_data = np.vstack((tasks_data, dataextract_relax.y[-samp_rate * seconds:]))\n",
+    "        tasks_y = np.vstack((tasks_y, 0))\n",
+    "        \n",
+    "        breathing = np.vstack((breathing, tmpBR_busy.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "        breathing = np.vstack((breathing, tmpBR_relax.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "\n",
+    "        heartbeat = np.vstack((heartbeat, tmpHR_busy.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "        heartbeat = np.vstack((heartbeat, tmpHR_relax.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "\n",
+    "    return tasks_data, tasks_y, breathing, heartbeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_task_complexities_timeframes_br_hb(path, ident, seconds):\n",
+    "    \"\"\"Returns raw data along with task complexity class.\n",
+    "    TODO: join functions. Add parameter to choose different task types and complexities\"\"\"\n",
+    "\n",
+    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
+    "    data = dataread.read_grc_data()  # read from files\n",
+    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
+    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
+    "\n",
+    "    tasks_data = np.empty((0, seconds*samp_rate))\n",
+    "    tasks_y = np.empty((0, 1))\n",
+    "    breathing = np.empty((0,12))\n",
+    "    heartbeat = np.empty((0,10))\n",
+    "\n",
+    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
+    "    \n",
+    "    for i in cog_res['task_number']:\n",
+    "        task_num_table = i - 225  # 0 - 17\n",
+    "        tmp_tasks_data = np.empty((0, seconds*samp_rate))\n",
+    "        tmp_tasks_y = np.empty((0, 1))\n",
+    "        tmp_breathing = np.empty((0,12))\n",
+    "        tmp_heartbeat = np.empty((0,10))\n",
+    "        \n",
+    "        ### task complexity classification\n",
+    "        if cog_res['task_complexity'][task_num_table] == 'medium':\n",
+    "            continue\n",
+    "        # if cog_res['task_label'][task_num_table] == 'FA' or cog_res['task_label'][task_num_table] == 'HP':\n",
+    "        #     continue\n",
+    "#         if cog_res['task_label'][task_num_table] != 'NC':\n",
+    "#             continue\n",
+    "            \n",
+    "        map_compl = {\n",
+    "            'low': 0,\n",
+    "            'medium': 2,\n",
+    "            'high': 1\n",
+    "        }\n",
+    "        for j in range(10):\n",
+    "            new_end = int(busy_n[task_num_table][1] - j * samp_rate)\n",
+    "            new_start = int(new_end - samp_rate*30)\n",
+    "            dataextract = dataextractor.DataExtractor(data[0][new_start:new_end],\n",
+    "                                                      data[1][new_start:new_end], samp_rate)\n",
+    "            # get extracted features for breathing\n",
+    "            tmpBR = dataextract.extract_from_breathing_time(data[0][new_start:new_end],\n",
+    "                                                                 data[1][new_start:new_end])\n",
+    "            #get extracted features for heartbeat\n",
+    "            tmpHB = dataextract.extract_from_heartbeat_time(data[0][new_start:new_end],\n",
+    "                                                                 data[1][new_start:new_end])\n",
+    "            \n",
+    "            try:\n",
+    "                \n",
+    "                tmp_tasks_data = np.vstack((tmp_tasks_data, dataextract.y[-samp_rate * seconds:]))\n",
+    "                tmp_tasks_y = np.vstack((tmp_tasks_y, map_compl.get(cog_res['task_complexity'][task_num_table])))\n",
+    "\n",
+    "                tmp_breathing = np.vstack((tmp_breathing, tmpBR.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "                tmp_heartbeat = np.vstack((tmp_heartbeat, tmpHB.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "                \n",
+    "            except ValueError:\n",
+    "#                 print(ident)\n",
+    "                continue\n",
+    "\n",
+    "            tasks_data = np.vstack((tasks_data, dataextract.y))\n",
+    "            tasks_y = np.vstack((tasks_y, map_compl.get(cog_res['task_complexity'][task_num_table])))\n",
+    "            breathing = np.vstack((breathing, tmpBR.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            heartbeat = np.vstack((heartbeat, tmpHB.to_numpy(dtype='float64', na_value=0)[0][:-1]))\n",
+    "            \n",
+    "    return tasks_data, tasks_y, breathing, heartbeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data_from_idents_br_hb(path, idents, seconds):\n",
+    "    \"\"\"Go through all user data and take out windows of only <seconds> long time frames,\n",
+    "    along with the given class (from 'divide_each_task' function).\n",
+    "    \"\"\"\n",
+    "    samp_rate = 43  # hard-coded sample rate\n",
+    "    data, ys = np.empty((0, samp_rate*seconds)), np.empty((0, 1))\n",
+    "    brs = np.empty((0,12))\n",
+    "    hbs = np.empty((0,10))\n",
+    "    combined = np.empty((0,22))\n",
+    "    for i in idents:\n",
+    "        #x, y, br, hr = get_busy_vs_relax_timeframes_br_hr(path, i, seconds) # either 'get_busy_vs_relax_timeframes',\n",
+    "        x, y, br, hb = get_task_complexities_timeframes_br_hb(path, i, seconds)\n",
+    "        # get_engagement_increase_vs_decrease_timeframes, get_task_complexities_timeframes or get_TLX_timeframes\n",
+    "        # TODO: ^ modify, so that different functions can be accessible by parameter\n",
+    "        data = np.vstack((data, x))\n",
+    "        ys = np.vstack((ys, y))\n",
+    "        brs = np.vstack((brs, br))\n",
+    "        hbs = np.vstack((hbs, hb))\n",
+    "    combined = np.hstack((brs,hbs))\n",
+    "    return data, ys, brs, hbs, combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, ys, brs, hbs, combined = get_data_from_idents_br_hb(path, [ident], seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120, 1290) (120, 1) (120, 12) (120, 10) (120, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tasks_data.shape, tasks_y.shape, breathing.shape, heartbeat.shape, combined.shape)"
    ]
   },
   {
