Run the low vs high notebook

--- a/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifiers\n",
+    "# Classifiers - busy vs relaxed\n",
     "Exploring different classifiers with different autoencoders."
    ]
   },
@@ -122,220 +122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the original author's code, just copied into separate cells of this jupyter notebook:"
+    "This is modfied original author's code for reading data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_busy_vs_relax_timeframes(path, ident, seconds):\n",
-    "    \"\"\"Returns raw data from either 'on task' or 'relax' time frames and their class (0 or 1).\n",
-    "    TODO: join functions\"\"\"\n",
-    "\n",
-    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
-    "    data = dataread.read_grc_data()  # read from files\n",
-    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
-    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
-    "\n",
-    "    tasks_data = np.empty((0, seconds*samp_rate))\n",
-    "    tasks_y = np.empty((0, 1))\n",
-    "\n",
-    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
-    "    relax_n = dataread.get_relax_timestamps(return_indexes=True)\n",
-    "\n",
-    "    for i in cog_res['task_number']:\n",
-    "        task_num_table = i - 225  # 0 - 17\n",
-    "\n",
-    "        ### task versus relax (1 sample each)\n",
-    "        dataextract = dataextractor.DataExtractor(data[0][busy_n[task_num_table][0]:busy_n[task_num_table][1]],\n",
-    "                                                  data[1][busy_n[task_num_table][0]:busy_n[task_num_table][1]],\n",
-    "                                                  samp_rate)\n",
-    "\n",
-    "        dataextract_relax = dataextractor.DataExtractor(data[0][relax_n[task_num_table][0]:relax_n[task_num_table][1]],\n",
-    "                                                        data[1][relax_n[task_num_table][0]:relax_n[task_num_table][1]],\n",
-    "                                                        samp_rate)\n",
-    "        try:\n",
-    "            tasks_data = np.vstack((tasks_data, dataextract.y[-samp_rate * seconds:]))\n",
-    "            tasks_y = np.vstack((tasks_y, 1))\n",
-    "            tasks_data = np.vstack((tasks_data, dataextract_relax.y[-samp_rate * seconds:]))\n",
-    "            tasks_y = np.vstack((tasks_y, 0))\n",
-    "        except ValueError:\n",
-    "            continue\n",
-    "#             print(ident)  # ignore short windows\n",
-    "\n",
-    "    return tasks_data, tasks_y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_engagement_increase_vs_decrease_timeframes(path, ident, seconds):\n",
-    "    \"\"\"Returns raw data from either engagement 'increase' or 'decrease' time frames and their class (0 or 1).\n",
-    "    TODO: join functions\"\"\"\n",
-    "\n",
-    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
-    "    data = dataread.read_grc_data()  # read from files\n",
-    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
-    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
-    "\n",
-    "    tasks_data = np.empty((0, seconds * samp_rate))\n",
-    "    tasks_y = np.empty((0, 1))\n",
-    "\n",
-    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
-    "    relax_n = dataread.get_relax_timestamps(return_indexes=True)\n",
-    "\n",
-    "    for i in cog_res['task_number']:\n",
-    "        task_num_table = i - 225  # 0 - 17\n",
-    "\n",
-    "        ### engagement increase / decrease\n",
-    "        if task_num_table == 0:\n",
-    "            continue\n",
-    "        mid = int((relax_n[task_num_table][0] + relax_n[task_num_table][1])/2)\n",
-    "        length = int(samp_rate*30)\n",
-    "        for j in range(10):\n",
-    "            new_end = int(mid-j*samp_rate)\n",
-    "\n",
-    "            new_start2 = int(mid+j*samp_rate)\n",
-    "\n",
-    "            dataextract_decrease = dataextractor.DataExtractor(data[0][new_end - length:new_end],\n",
-    "                                                               data[1][new_end-length:new_end],\n",
-    "                                                               samp_rate)\n",
-    "\n",
-    "            dataextract_increase = dataextractor.DataExtractor(data[0][new_start2: new_start2 + length],\n",
-    "                                                               data[1][new_start2: new_start2 + length], samp_rate)\n",
-    "\n",
-    "            try:\n",
-    "                tasks_data = np.vstack((tasks_data, dataextract_increase.y))\n",
-    "                tasks_y = np.vstack((tasks_y, 1))\n",
-    "                tasks_data = np.vstack((tasks_data, dataextract_decrease.y))\n",
-    "                tasks_y = np.vstack((tasks_y, 0))\n",
-    "            except ValueError:\n",
-    "                print(ident)  # ignore short windows\n",
-    "\n",
-    "    return tasks_data, tasks_y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_task_complexities_timeframes(path, ident, seconds):\n",
-    "    \"\"\"Returns raw data along with task complexity class.\n",
-    "    TODO: join functions. Add parameter to choose different task types and complexities\"\"\"\n",
-    "\n",
-    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
-    "    data = dataread.read_grc_data()  # read from files\n",
-    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
-    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
-    "\n",
-    "    tasks_data = np.empty((0, seconds*samp_rate))\n",
-    "    tasks_y = np.empty((0, 1))\n",
-    "\n",
-    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
-    "    relax_n = dataread.get_relax_timestamps(return_indexes=True)\n",
-    "\n",
-    "    for i in cog_res['task_number']:\n",
-    "        task_num_table = i - 225  # 0 - 17\n",
-    "\n",
-    "        ### task complexity classification\n",
-    "        if cog_res['task_complexity'][task_num_table] == 'medium':\n",
-    "            continue\n",
-    "        # if cog_res['task_label'][task_num_table] == 'FA' or cog_res['task_label'][task_num_table] == 'HP':\n",
-    "        #     continue\n",
-    "        if cog_res['task_label'][task_num_table] != 'NC':\n",
-    "            continue\n",
-    "        map_compl = {\n",
-    "            'low': 0,\n",
-    "            'medium': 2,\n",
-    "            'high': 1\n",
-    "        }\n",
-    "        for j in range(10):\n",
-    "            new_end = int(busy_n[task_num_table][1] - j * samp_rate)\n",
-    "            new_start = int(new_end - samp_rate*30)\n",
-    "            dataextract = dataextractor.DataExtractor(data[0][new_start:new_end],\n",
-    "                                                      data[1][new_start:new_end], samp_rate)\n",
-    "            try:\n",
-    "                tasks_data = np.vstack((tasks_data, dataextract.y))\n",
-    "                tasks_y = np.vstack((tasks_y, map_compl.get(cog_res['task_complexity'][task_num_table])))\n",
-    "            except ValueError:\n",
-    "                print(ident)\n",
-    "\n",
-    "    return tasks_data, tasks_y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_TLX_timeframes(path, ident, seconds):\n",
-    "    \"\"\"Returns raw data along with task load index class.\n",
-    "    TODO: join functions. Add parameter to choose different task types and complexities\"\"\"\n",
-    "\n",
-    "    dataread = datareader.DataReader(path, ident)  # initialize path to data\n",
-    "    data = dataread.read_grc_data()  # read from files\n",
-    "    samp_rate = int(round(len(data[1]) / max(data[0])))\n",
-    "    cog_res = dataread.read_cognitive_load_study(str(ident) + '-primary-extract.txt')\n",
-    "\n",
-    "    tasks_data = np.empty((0, seconds*samp_rate))\n",
-    "    tasks_y = np.empty((0, 1))\n",
-    "\n",
-    "    busy_n = dataread.get_data_task_timestamps(return_indexes=True)\n",
-    "    relax_n = dataread.get_relax_timestamps(return_indexes=True)\n",
-    "\n",
-    "    for i in cog_res['task_number']:\n",
-    "        task_num_table = i - 225  # 0 - 17\n",
-    "\n",
-    "        ### task load index\n",
-    "        if cog_res['task_complexity'][task_num_table] == 'medium' or cog_res['task_label'][task_num_table] != 'PT':\n",
-    "            continue\n",
-    "        for j in range(10):\n",
-    "            new_end = int(busy_n[task_num_table][1] - j * samp_rate)\n",
-    "            new_start = int(new_end - samp_rate*30)\n",
-    "            dataextract = dataextractor.DataExtractor(data[0][new_start:new_end],\n",
-    "                                                      data[1][new_start:new_end], samp_rate)\n",
-    "            try:\n",
-    "                tasks_data = np.vstack((tasks_data, dataextract.y))\n",
-    "                tasks_y = np.vstack((tasks_y, cog_res['task_load_index'][task_num_table]))\n",
-    "            except ValueError:\n",
-    "                print(ident)\n",
-    "\n",
-    "    return tasks_data, tasks_y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data_from_idents(path, idents, seconds):\n",
-    "    \"\"\"Go through all user data and take out windows of only <seconds> long time frames,\n",
-    "    along with the given class (from 'divide_each_task' function).\n",
-    "    \"\"\"\n",
-    "    samp_rate = 43  # hard-coded sample rate\n",
-    "    data, ys = np.empty((0, samp_rate*seconds)), np.empty((0, 1))\n",
-    "    for i in idents:\n",
-    "        x, y = get_busy_vs_relax_timeframes(path, i, seconds) # either 'get_busy_vs_relax_timeframes',\n",
-    "        # get_engagement_increase_vs_decrease_timeframes, get_task_complexities_timeframes or get_TLX_timeframes\n",
-    "        # TODO: ^ modify, so that different functions can be accessible by parameter\n",
-    "        data = np.vstack((data, x))\n",
-    "        ys = np.vstack((ys, y))\n",
-    "    return data, ys\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,19 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sequence_padding(x, maxlen):\n",
-    "    \"\"\"Pad sequences (all have to be same length).\"\"\"\n",
-    "    print('Pad sequences (samples x time)')\n",
-    "    return sequence.pad_sequences(x, maxlen=maxlen, dtype=np.float)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +528,7 @@
     "path = '../../../StudyData/'\n",
     "\n",
     "# change to len(idents) at the end to use all the data\n",
-    "n = 3 #len(idents)"
+    "n = 5 #len(idents)"
    ]
   },
   {
@@ -925,7 +705,7 @@
     "        epochs = 100\n",
     "\n",
     "        # Undercomplete AE:\n",
-    "        autoencoder, encoded = undercomplete_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = undercomplete_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = dense_classifier(encoded, params)\n",
@@ -938,7 +718,7 @@
     "        accs['undercomplete'].append(curr_acc)\n",
     "\n",
     "        # Sparse AE:\n",
-    "        autoencoder, encoded = sparse_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = sparse_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = dense_classifier(encoded, params)\n",
@@ -951,7 +731,7 @@
     "        accs['sparse'].append(curr_acc)\n",
     "\n",
     "        # Deep AE:\n",
-    "        autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=60, dec_layers=[256,512])\n",
+    "        autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=40, dec_layers=[256,512])\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = dense_classifier(encoded, params)\n",
@@ -964,7 +744,7 @@
     "        accs['deep'].append(curr_acc)\n",
     "\n",
     "        # Contractive AE:\n",
-    "        autoencoder, encoded = contractive_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = contractive_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = dense_classifier(encoded, params)\n",
@@ -1283,8 +1063,8 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    'kernel_size': 8,\n",
-    "    'filters': 3,\n",
+    "    'kernel_size': 4,\n",
+    "    'filters': 2,\n",
     "    'strides': 2,\n",
     "    'pool_size': 2,\n",
     "    'dropout': 0.09,\n",
@@ -1422,7 +1202,7 @@
     "        epochs = 100\n",
     "\n",
     "        # undercomplete AE\n",
-    "        autoencoder, encoded = undercomplete_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = undercomplete_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = LSTM_classifier(encoded, params)\n",
@@ -1435,7 +1215,7 @@
     "        accs['undercomplete'].append(curr_acc)\n",
     "\n",
     "        # sparse AE\n",
-    "        autoencoder, encoded = sparse_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = sparse_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = LSTM_classifier(encoded, params)\n",
@@ -1448,7 +1228,7 @@
     "        accs['sparse'].append(curr_acc)\n",
     "\n",
     "        # deep AE\n",
-    "        autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=60, dec_layers=[256,512])\n",
+    "        autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=40, dec_layers=[256,512])\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = LSTM_classifier(encoded, params)\n",
@@ -1461,7 +1241,7 @@
     "        accs['deep'].append(curr_acc)\n",
     "\n",
     "        # contractive AE\n",
-    "        autoencoder, encoded = contractive_ae(xt_train, 60)\n",
+    "        autoencoder, encoded = contractive_ae(xt_train, 40)\n",
     "        sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                               xt_valid, xt_valid, xt_test, xt_test)\n",
     "        model = LSTM_classifier(encoded, params)\n",
@@ -1746,7 +1526,7 @@
     "            epochs = 100\n",
     "\n",
     "            # undercomplete AE\n",
-    "            autoencoder, encoded = undercomplete_ae(xt_train, 60, encoded_as_model=True)\n",
+    "            autoencoder, encoded = undercomplete_ae(xt_train, 40, encoded_as_model=True)\n",
     "            sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                                   xt_valid, xt_valid, xt_test, xt_test)\n",
     "            model = classifier_function()\n",
@@ -1757,7 +1537,7 @@
     "            accs['undercomplete'].append(curr_acc)\n",
     "\n",
     "            # sparse AE\n",
-    "            autoencoder, encoded = sparse_ae(xt_train, 60, encoded_as_model=True)\n",
+    "            autoencoder, encoded = sparse_ae(xt_train, 40, encoded_as_model=True)\n",
     "            sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                                   xt_valid, xt_valid, xt_test, xt_test)\n",
     "            model = classifier_function()\n",
@@ -1768,7 +1548,7 @@
     "            accs['sparse'].append(curr_acc)\n",
     "\n",
     "            # deep AE\n",
-    "            autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=60, dec_layers=[256,512], encoded_as_model=True)\n",
+    "            autoencoder, encoded = deep_ae(xt_train, enc_layers=[512,256], encoding_dim=40, dec_layers=[256,512], encoded_as_model=True)\n",
     "            sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                                   xt_valid, xt_valid, xt_test, xt_test)\n",
     "            model = classifier_function()\n",
@@ -1779,7 +1559,7 @@
     "            accs['deep'].append(curr_acc)\n",
     "\n",
     "            # contractive AE\n",
-    "            autoencoder, encoded = contractive_ae(xt_train, 60, encoded_as_model=True)\n",
+    "            autoencoder, encoded = contractive_ae(xt_train, 40, encoded_as_model=True)\n",
     "            sc, curr_acc, epoch_data = model_train(autoencoder, xt_train, xt_train, batch_size, epochs,\n",
     "                                                   xt_valid, xt_valid, xt_test, xt_test)\n",
     "            model = classifier_function()\n",
